# silent-auction-cli

./: .gitignore  README.md  pylint.toml  pyproject.toml
src/cli/: __main__.py
src/cli/adapters/: AuctionInterface.py  BidInterface.py  KeycloakInterface.py  SchedulerInterface.py
src/cli/configuration/: variables.py
src/cli/controllers/: Auction.py  Bid.py  User.py
src/cli/repositories/: Auction.py  AuctionEntity.py  Bid.py
